# target-azure-storage

./: .gitignore  README.md  meltano.yml  pyproject.toml  target.sh
.devcontainer/: devcontainer.json  docker-compose.yaml
.devcontainer/dockerfiles/: requirements.txt  vscode.Dockerfile
.secrets/: .gitignore  config.example.json
extract/: tap.jsonl
target_azure_storage/: sinks.py  target.py
target_azure_storage/tests/: __init__.py  test_core.py
