[tool.poetry]
name = "target-azure-storage"
version = "0.0.1"
description = "`target-azure-storage` is a Singer target for Azure Storage, built with the Meltano SDK for Singer Targets."
authors = ["Jules Huisman"]
keywords = [
    "meltano",
    "singer",
    "azure",
    "storage",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
singer-sdk = "^0.4.3"
azure-storage-file-datalake = "^12.5.0"
pandas = "^1.4.1"
pyarrow = "^7.0.0"
fsspec = "^2022.1.0"
adlfs = "^2022.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_azure_storage"

[build-system]
# Uncomment the pinned version in favor of the git URL once
# https://github.com/python-poetry/poetry-core/pull/257 is merged
# and a new poetry-core 1.0.x is released
# requires = ["poetry-core>=1.0.0"]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-azure-storage = 'target_azure_storage.target:TargetAzureStorage.cli'
